Fix front-page header title alignment

--- a/sass/site/pages/_front-page.scss
+++ b/sass/site/pages/_front-page.scss
@@ -40,12 +40,8 @@
         margin-left: 35px;
       }
       
-      @media all and ( min-width: $screen__sm ) {
-        margin-left: 39px;
-      }
-      
       @media all and ( min-width: $screen__lg ) {
-        margin-left: 53px;
+        margin-left: 48px;
       }
     }
   }
